--- a/package.json
+++ b/package.json
@@ -20,15 +20,19 @@
     "@better-scroll/scroll-bar": "^2.0.0-alpha.20",
     "axios": "^0.19.0",
     "better-scroll": "^1.15.2",
+    "bootstrap": "^4.4.1",
     "clipboard": "^2.0.4",
     "core-js": "^2.6.5",
     "element-ui": "^2.10.1",
     "good-storage": "^1.1.0",
+    "jquery": "^3.4.1",
     "lodash-es": "^4.17.15",
+    "popper.js": "^1.16.1",
     "vue": "^2.6.10",
     "vue-lazyload": "^1.3.3",
     "vue-meta": "^2.2.1",
     "vue-router": "^3.0.3",
+    "vue2.0-zoom": "^2.1.1",
     "vuex": "^3.0.1",
     "xgplayer": "^2.1.9"
   },
