--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "jquery": "^3.4.1",
     "lodash-es": "^4.17.15",
     "popper.js": "^1.16.1",
+    "qs": "^6.9.3",
     "vue": "^2.6.10",
     "vue-lazyload": "^1.3.3",
     "vue-meta": "^2.2.1",
+    "vue-notification": "^1.3.20",
     "vue-router": "^3.0.3",
     "vue2.0-zoom": "^2.1.1",
     "vuex": "^3.0.1",
